--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
+    <h1>&nbsp;</h1>
     <main>
       <div class="container">
         <form class="tip__form">
@@ -83,6 +84,7 @@
                 alt=""
                 aria-hidden="true"
               />
+
               <div class="label__container">
                 <label for="num-people">Number of People</label>
                 <span class="label__container-error">Can't be zero</span>
