--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <title>Frontend Mentor | Tip calculator app</title>
   </head>
   <body>
-    <h1>&nbsp;</h1>
     <main>
       <div class="container">
         <form class="tip__form">
@@ -49,7 +48,7 @@
           </div>
 
           <div class="tip__btn-box">
-            <span class="tip__btn-box-label">Select Tip %</span>
+            <h1 class="tip__btn-box-label">Select Tip %</h1>
             <div class="tip__btn-box-btns">
               <button class="btn" type="button" data-tip-value="0.05">
                 5%
